--- a/yew.html
+++ b/yew.html
@@ -1,3 +1,5 @@
+<!DOCTYPE html>
+<html lang="en">
 <button class="enableEthereumButton">Enable Ethereum</button>
 <h2>Account: <span class="showAccount"></span></h2>
 
@@ -15,3 +17,4 @@
             showAccount.innerHTML = account;
         }
 </script>
+</html>
