--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
 
     <script>
-        log.console(Web3.version)
+        log.console("Web3.version")
         log.console(web3.version)
         window.addEventListener('load', async () => {
                 // Modern dapp browsers...
