--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
 
     <script>
-        log.console("Web3.version")
-        log.console(web3.version)
+        console.log(Web3.version)
+        console.log(web3.version)
         window.addEventListener('load', async () => {
                 // Modern dapp browsers...
                 if (window.ethereum) {
