--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                 }
             });
 
-
+        console.log("try this")
         $(document).ready(function () {
             $(".ether").change(function () {
                 $(".token").val(Math.round($(".ether").val() * 625));
