--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         window.addEventListener('load', async () => {
                 // Modern dapp browsers...
                 if (window.ethereum) {
-                    window.web3 = new Web3(ethereum);
+                    // window.web3 = new Web3(ethereum);
                     try {
                         // Request account access if needed
                         await ethereum.enable();
@@ -51,7 +51,7 @@
                 }
                 // Legacy dapp browsers...
                 else if (window.web3) {
-                    window.web3 = new Web3(web3.currentProvider);
+                    // window.web3 = new Web3(web3.currentProvider);
                     console.log("old browser")
                     // Acccounts always exposed
                 }
