--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
     <link rel="stylesheet" type="text/css" href="main.css">
 
-    <script src="https://cdn.jsdelivr.net/npm/web3@latest/dist/web3.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/web3@1.0.0/dist/web3.min.js"></script>
 
 </head>
 
@@ -85,7 +85,7 @@
         $('#button').click(function () {
             console.log("button pressed")
             // icoContract.methods.buyStock().send({from: web3.eth.accounts[0], value: $(".ether").val() * 10 ** 18 })
-            console.log(icoContract.cash().call())
+            console.log(icoContract.cash().call({from: web3.eth.accounts[0]}))
         });
 
 
