--- a/index.html
+++ b/index.html
@@ -85,8 +85,11 @@
         $('#button').click(function () {
             console.log("button pressed")
             // icoContract.methods.buyStock().send({from: web3.eth.accounts[0], value: $(".ether").val() * 10 ** 18 })
-            console.log(icoContract.cash().call({from: web3.eth.accounts[0]}))
-        });
+            console.log(icoContract.cash().call({from: web3.eth.accounts[0]}, function (err, transactionHash) {
+                if (!err)
+                    console.log(transactionHash);
+            })
+        );
 
 
     </script>
