--- a/index.html
+++ b/index.html
@@ -37,29 +37,29 @@
         console.log(Web3.version)
         console.log(web3.version)
         window.addEventListener('load', async () => {
-                // Modern dapp browsers...
-                if (window.ethereum) {
-                    // window.web3 = new Web3(ethereum);
-                    try {
-                        // Request account access if needed
-                        await ethereum.enable();
-                        console.log("new browser")
-                        // Acccounts now exposed
-                    } catch (error) {
-                        // User denied account access...
-                    }
+            // Modern dapp browsers...
+            if (window.ethereum) {
+                // window.web3 = new Web3(ethereum);
+                try {
+                    // Request account access if needed
+                    await ethereum.enable();
+                    console.log("new browser")
+                    // Acccounts now exposed
+                } catch (error) {
+                    // User denied account access...
                 }
-                // Legacy dapp browsers...
-                else if (window.web3) {
-                    // window.web3 = new Web3(web3.currentProvider);
-                    console.log("old browser")
-                    // Acccounts always exposed
-                }
-                // Non-dapp browsers...
-                else {
-                    console.log('Non-Ethereum browser detected. You should consider trying MetaMask!');
-                }
-            });
+            }
+            // Legacy dapp browsers...
+            else if (window.web3) {
+                // window.web3 = new Web3(web3.currentProvider);
+                console.log("old browser")
+                // Acccounts always exposed
+            }
+            // Non-dapp browsers...
+            else {
+                console.log('Non-Ethereum browser detected. You should consider trying MetaMask!');
+            }
+        });
 
         console.log("try this")
         $(document).ready(function () {
@@ -85,11 +85,11 @@
         $('#button').click(function () {
             console.log("button pressed")
             // icoContract.methods.buyStock().send({from: web3.eth.accounts[0], value: $(".ether").val() * 10 ** 18 })
-            console.log(icoContract.cash().call({from: web3.eth.accounts[0]}, function (err, transactionHash) {
-                if (!err)
-                    console.log(transactionHash);
+            console.log(icoContract.cash().call({ from: web3.eth.accounts[0] }, function (error, result) {
+                if (!error)
+                    console.log(result);
             })
-        );
+            );
         });
 
 
