--- a/index.html
+++ b/index.html
@@ -82,16 +82,19 @@
         console.log("yew2")
         console.log(icoContract);
 
-        $('#button').click(function () {
-            console.log("button pressed")
-            // icoContract.methods.buyStock().send({from: web3.eth.accounts[0], value: $(".ether").val() * 10 ** 18 })
-            console.log(icoContract.cash().call({ from: web3.eth.accounts[0] }
-            ).then(function (err, transactionHash) {
-                if (!err)
-                    console.log(transactionHash);
-            })
-        );
-        });
+        const ethereumButton = document.querySelector('#enableEthereumButton');
+
+        ethereumButton.addEventListener('click', () => {
+                getAccount();
+            });
+
+            async function getAccount() {
+                const accounts = await ethereum.enable();
+                const account = accounts[0];
+                console.log(icoContract.cash().call({ from: account }));
+            }
+
+
 
     </script>
 
