--- a/yew.html
+++ b/yew.html
@@ -14,7 +14,9 @@
         async function getAccount() {
             const accounts = await ethereum.enable();
             const account = accounts[0];
-            showAccount.innerHTML = account;
+            console.log(icoContract.cash().call({ from: account}));
         }
+
+
 </script>
 </html>
