--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
         console.log("yew2")
         console.log(icoContract);
 
-        const ethereumButton = document.querySelector('.button');
+        const ethereumButton = document.getElementById('button');
 
         ethereumButton.addEventListener('click', () => {
                 getAccount();
