--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
             async function getAccount() {
                 const accounts = await ethereum.enable();
                 const account = accounts[0];
-                console.log(icoContract.cash().call({ from: account }));
+                return icoContract.cash().call({ from: account })
             }
 
 
