--- a/index.html
+++ b/index.html
@@ -93,6 +93,7 @@
             }, function (error, result) { //get callback from function which is your transaction key
                 if (!error) {
                     console.log("result", result);
+                    console.log(result.c[0])
 
                 } else {
                     console.log("error", error);
