display token balance

--- a/index.html
+++ b/index.html
@@ -29,6 +29,9 @@
         <h1>Check Token Balance!</h1>
         <button id="balance">check balance</button>
 
+        <label id="tokens" class="col-lg-2 control-label">Amount in Token</label>
+
+
 
 
     </div>
@@ -110,7 +113,7 @@
             }, function (error, result) { //get callback from function which is your transaction key
                 if (!error) {
                     console.log("result", result);
-                    console.log(result.c[0])
+                    $(".tokens").val(result.c[0]);
                 } else {
                     console.log("error", error);
                 }
