--- a/index.html
+++ b/index.html
@@ -44,30 +44,31 @@
 
         console.log("Web3.version", Web3.version)
         console.log("web3.version", web3.version)
-        window.addEventListener('load', async () => {
-            // Modern dapp browsers...
-            if (window.ethereum) {
-                // window.web3 = new Web3(ethereum);
-                try {
-                    // Request account access if needed
-                    await ethereum.enable();
-                    console.log("new browser")
-                    // Acccounts now exposed
-                } catch (error) {
-                    // User denied account access...
-                }
-            }
-            // Legacy dapp browsers...
-            else if (window.web3) {
-                // window.web3 = new Web3(web3.currentProvider);
-                console.log("old browser")
-                // Acccounts always exposed
-            }
-            // Non-dapp browsers...
-            else {
-                console.log('Non-Ethereum browser detected. You should consider trying MetaMask!');
-            }
-        });
+
+        // window.addEventListener('load', async () => {
+        //     // Modern dapp browsers...
+        //     if (window.ethereum) {
+        //         // window.web3 = new Web3(ethereum);
+        //         try {
+        //             // Request account access if needed
+        //             await ethereum.enable();
+        //             console.log("new browser")
+        //             // Acccounts now exposed
+        //         } catch (error) {
+        //             // User denied account access...
+        //         }
+        //     }
+        //     // Legacy dapp browsers...
+        //     else if (window.web3) {
+        //         // window.web3 = new Web3(web3.currentProvider);
+        //         console.log("old browser")
+        //         // Acccounts always exposed
+        //     }
+        //     // Non-dapp browsers...
+        //     else {
+        //         console.log('Non-Ethereum browser detected. You should consider trying MetaMask!');
+        //     }
+        // });
 
         $(document).ready(function () {
             $(".ether").change(function () {
@@ -113,7 +114,7 @@
             }, function (error, result) { //get callback from function which is your transaction key
                 if (!error) {
                     console.log("result", result);
-                    document.getElementById("tokens").innerHTML = result.c[0]
+                    document.getElementById("tokens").innerHTML = "you own " + result.c[0] + " tokens!";
                 } else {
                     console.log("error", error);
                 }
