--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
 
     <script src="https://cdn.jsdelivr.net/npm/web3@0.2.6/dist/web3.min.js"></script>
 
+    <script src="main.js"></script>
+
 </head>
 
 <body>
@@ -45,8 +47,6 @@
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 
-    <!-- <script src="main.js"></script> -->
-
     <script>
         var myEther;
 
@@ -68,7 +68,7 @@
             web3.eth.defaultAccount = web3.eth.accounts[0];
         } catch (err) {
             console.log(err);
-            $('.mask').show();
+            document.getElementById("mask").style.display = "block";
         }
 
         var icoContract = web3.eth.contract([{
@@ -242,10 +242,10 @@
         }]).at('0x7b3b1049ff4171fe069c0e28a04d8db7e7a9fd37');
         console.log("icoContract", icoContract);
 
-        const buyButton = $(".buy");
+        const buyButton = document.getElementById('buy');
 
-        buyButton.click(function () {
-            console.log("click")
+        buyButton.addEventListener('click', () => {
+
             icoContract.buyStock.sendTransaction({
                 from: web3.eth.accounts[0],
                 value: myEther * 10 ** 18,
@@ -260,10 +260,9 @@
 
         });
 
-        const balanceButton = $('.balance');
+        const balanceButton = document.getElementById('balance');
 
-        balanceButton.click(function () {
-            console.log("click")
+        balanceButton.addEventListener('click', () => {
 
             icoContract.getHolding.call(web3.eth.accounts[0], {
                 from: web3.eth.accounts[0],
