--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
     <script src="https://cdn.jsdelivr.net/npm/web3@0.2.6/dist/web3.min.js"></script>
 
-    <script src="main.js"></script>
+    <!-- <script src="main.js"></script> -->
 
 </head>
 
