--- a/index.html
+++ b/index.html
@@ -11,8 +11,6 @@
 
     <script src="https://cdn.jsdelivr.net/npm/web3@0.2.6/dist/web3.min.js"></script>
 
-    <!-- <script src="main.js"></script> -->
-
 </head>
 
 <body>
@@ -34,10 +32,8 @@
         <label id="tokens" class="col-lg-2 control-label"></label>
 
         <div id="mask" style="display: none">
-            <label class="col-lg-2 control-label">It seems your browser doesn't support MetaMask or it is not
-                installed.</label>
-            <label class="col-lg-2 control-label">Go to the <a href="https://metamask.io">MetaMask Website</a> for more
-                details</label>
+            <label class="col-lg-2 control-label">It seems your browser doesn't support MetaMask or it is not installed.</label>
+            <label class="col-lg-2 control-label">Go to the <a href="https://metamask.io">MetaMask Website</a> for more details</label>
         </div>
 
 
@@ -48,6 +44,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 
     <script>
+
         var myEther;
 
         console.log("web3.version", web3.version)
@@ -68,178 +65,10 @@
             web3.eth.defaultAccount = web3.eth.accounts[0];
         } catch (err) {
             console.log(err);
-            document.getElementById("mask").style.display = "block";
+            document.getElementById("mask").style.display="block";
         }
 
-        var icoContract = web3.eth.contract([{
-            "name": "Buy",
-            "inputs": [{
-                "type": "address",
-                "name": "_buyer",
-                "indexed": true
-            }, {
-                "type": "uint256",
-                "name": "_buy_order",
-                "indexed": false
-            }],
-            "anonymous": false,
-            "type": "event"
-        }, {
-            "name": "Pay",
-            "inputs": [{
-                "type": "address",
-                "name": "_vendor",
-                "indexed": true
-            }, {
-                "type": "uint256",
-                "name": "_amount",
-                "indexed": false
-            }],
-            "anonymous": false,
-            "type": "event"
-        }, {
-            "name": "burnIt",
-            "outputs": [],
-            "inputs": [{
-                "type": "uint256",
-                "name": "_value"
-            }],
-            "constant": false,
-            "payable": false,
-            "type": "function",
-            "gas": 60388
-        }, {
-            "outputs": [],
-            "inputs": [{
-                "type": "address",
-                "name": "_tokenAddress"
-            }, {
-                "type": "uint256",
-                "name": "_total_shares"
-            }, {
-                "type": "uint256",
-                "name": "initial_price"
-            }, {
-                "type": "uint256",
-                "name": "soft_cap"
-            }],
-            "constant": false,
-            "payable": false,
-            "type": "constructor"
-        }, {
-            "name": "stockAvailable",
-            "outputs": [{
-                "type": "uint256",
-                "name": ""
-            }],
-            "inputs": [],
-            "constant": true,
-            "payable": false,
-            "type": "function",
-            "gas": 2587
-        }, {
-            "name": "buyStock",
-            "outputs": [],
-            "inputs": [],
-            "constant": false,
-            "payable": true,
-            "type": "function",
-            "gas": 122906
-        }, {
-            "name": "getHolding",
-            "outputs": [{
-                "type": "uint256",
-                "name": ""
-            }],
-            "inputs": [{
-                "type": "address",
-                "name": "_stockholder"
-            }],
-            "constant": true,
-            "payable": false,
-            "type": "function",
-            "gas": 2117
-        }, {
-            "name": "cash",
-            "outputs": [{
-                "type": "uint256",
-                "name": ""
-            }],
-            "inputs": [],
-            "constant": true,
-            "payable": false,
-            "type": "function",
-            "gas": 563
-        }, {
-            "name": "payBill",
-            "outputs": [],
-            "inputs": [{
-                "type": "address",
-                "name": "vendor"
-            }, {
-                "type": "uint256",
-                "name": "amount"
-            }],
-            "constant": false,
-            "payable": false,
-            "type": "function",
-            "gas": 38171
-        }, {
-            "name": "totalShares",
-            "outputs": [{
-                "type": "uint256",
-                "name": ""
-            }],
-            "inputs": [],
-            "constant": true,
-            "payable": false,
-            "type": "function",
-            "gas": 1421
-        }, {
-            "name": "price",
-            "outputs": [{
-                "type": "uint256",
-                "name": ""
-            }],
-            "inputs": [],
-            "constant": true,
-            "payable": false,
-            "type": "function",
-            "gas": 1451
-        }, {
-            "name": "softCap",
-            "outputs": [{
-                "type": "uint256",
-                "name": ""
-            }],
-            "inputs": [],
-            "constant": true,
-            "payable": false,
-            "type": "function",
-            "gas": 1481
-        }, {
-            "name": "buy_order",
-            "outputs": [{
-                "type": "uint256",
-                "name": ""
-            }],
-            "inputs": [],
-            "constant": true,
-            "payable": false,
-            "type": "function",
-            "gas": 1511
-        }, {
-            "name": "owner",
-            "outputs": [{
-                "type": "address",
-                "name": ""
-            }],
-            "inputs": [],
-            "constant": true,
-            "payable": false,
-            "type": "function",
-            "gas": 1541
-        }]).at('0x7b3b1049ff4171fe069c0e28a04d8db7e7a9fd37');
+        var icoContract = web3.eth.contract([{ "name": "Buy", "inputs": [{ "type": "address", "name": "_buyer", "indexed": true }, { "type": "uint256", "name": "_buy_order", "indexed": false }], "anonymous": false, "type": "event" }, { "name": "Pay", "inputs": [{ "type": "address", "name": "_vendor", "indexed": true }, { "type": "uint256", "name": "_amount", "indexed": false }], "anonymous": false, "type": "event" }, { "name": "burnIt", "outputs": [], "inputs": [{ "type": "uint256", "name": "_value" }], "constant": false, "payable": false, "type": "function", "gas": 60388 }, { "outputs": [], "inputs": [{ "type": "address", "name": "_tokenAddress" }, { "type": "uint256", "name": "_total_shares" }, { "type": "uint256", "name": "initial_price" }, { "type": "uint256", "name": "soft_cap" }], "constant": false, "payable": false, "type": "constructor" }, { "name": "stockAvailable", "outputs": [{ "type": "uint256", "name": "" }], "inputs": [], "constant": true, "payable": false, "type": "function", "gas": 2587 }, { "name": "buyStock", "outputs": [], "inputs": [], "constant": false, "payable": true, "type": "function", "gas": 122906 }, { "name": "getHolding", "outputs": [{ "type": "uint256", "name": "" }], "inputs": [{ "type": "address", "name": "_stockholder" }], "constant": true, "payable": false, "type": "function", "gas": 2117 }, { "name": "cash", "outputs": [{ "type": "uint256", "name": "" }], "inputs": [], "constant": true, "payable": false, "type": "function", "gas": 563 }, { "name": "payBill", "outputs": [], "inputs": [{ "type": "address", "name": "vendor" }, { "type": "uint256", "name": "amount" }], "constant": false, "payable": false, "type": "function", "gas": 38171 }, { "name": "totalShares", "outputs": [{ "type": "uint256", "name": "" }], "inputs": [], "constant": true, "payable": false, "type": "function", "gas": 1421 }, { "name": "price", "outputs": [{ "type": "uint256", "name": "" }], "inputs": [], "constant": true, "payable": false, "type": "function", "gas": 1451 }, { "name": "softCap", "outputs": [{ "type": "uint256", "name": "" }], "inputs": [], "constant": true, "payable": false, "type": "function", "gas": 1481 }, { "name": "buy_order", "outputs": [{ "type": "uint256", "name": "" }], "inputs": [], "constant": true, "payable": false, "type": "function", "gas": 1511 }, { "name": "owner", "outputs": [{ "type": "address", "name": "" }], "inputs": [], "constant": true, "payable": false, "type": "function", "gas": 1541 }]).at('0x7b3b1049ff4171fe069c0e28a04d8db7e7a9fd37');
         console.log("icoContract", icoContract);
 
         const buyButton = document.getElementById('buy');
@@ -276,6 +105,8 @@
             });
 
         });
+
+
     </script>
 
 </body>
