--- a/index.html
+++ b/index.html
@@ -31,11 +31,6 @@
 
         <label id="tokens" class="col-lg-2 control-label"></label>
 
-        <div id="mask" style="display: none">
-            <label class="col-lg-2 control-label">It seems your browser doesn't support MetaMask or it is not installed.</label>
-            <label class="col-lg-2 control-label">Go to the <a href="https://metamask.io">MetaMask Website</a> for more details</label>
-        </div>
-
 
 
 
@@ -47,7 +42,33 @@
 
         var myEther;
 
+        console.log("Web3.version", Web3.version)
         console.log("web3.version", web3.version)
+
+        // window.addEventListener('load', async () => {
+        //     // Modern dapp browsers...
+        //     if (window.ethereum) {
+        //         // window.web3 = new Web3(ethereum);
+        //         try {
+        //             // Request account access if needed
+        //             await ethereum.enable();
+        //             console.log("new browser")
+        //             // Acccounts now exposed
+        //         } catch (error) {
+        //             // User denied account access...
+        //         }
+        //     }
+        //     // Legacy dapp browsers...
+        //     else if (window.web3) {
+        //         // window.web3 = new Web3(web3.currentProvider);
+        //         console.log("old browser")
+        //         // Acccounts always exposed
+        //     }
+        //     // Non-dapp browsers...
+        //     else {
+        //         console.log('Non-Ethereum browser detected. You should consider trying MetaMask!');
+        //     }
+        // });
 
         $(document).ready(function () {
             $(".ether").change(function () {
@@ -61,12 +82,7 @@
             });
         });
 
-        try {
-            web3.eth.defaultAccount = web3.eth.accounts[0];
-        } catch (err) {
-            console.log(err);
-            document.getElementById("mask").style.display="block";
-        }
+        web3.eth.defaultAccount = web3.eth.accounts[0];
 
         var icoContract = web3.eth.contract([{ "name": "Buy", "inputs": [{ "type": "address", "name": "_buyer", "indexed": true }, { "type": "uint256", "name": "_buy_order", "indexed": false }], "anonymous": false, "type": "event" }, { "name": "Pay", "inputs": [{ "type": "address", "name": "_vendor", "indexed": true }, { "type": "uint256", "name": "_amount", "indexed": false }], "anonymous": false, "type": "event" }, { "name": "burnIt", "outputs": [], "inputs": [{ "type": "uint256", "name": "_value" }], "constant": false, "payable": false, "type": "function", "gas": 60388 }, { "outputs": [], "inputs": [{ "type": "address", "name": "_tokenAddress" }, { "type": "uint256", "name": "_total_shares" }, { "type": "uint256", "name": "initial_price" }, { "type": "uint256", "name": "soft_cap" }], "constant": false, "payable": false, "type": "constructor" }, { "name": "stockAvailable", "outputs": [{ "type": "uint256", "name": "" }], "inputs": [], "constant": true, "payable": false, "type": "function", "gas": 2587 }, { "name": "buyStock", "outputs": [], "inputs": [], "constant": false, "payable": true, "type": "function", "gas": 122906 }, { "name": "getHolding", "outputs": [{ "type": "uint256", "name": "" }], "inputs": [{ "type": "address", "name": "_stockholder" }], "constant": true, "payable": false, "type": "function", "gas": 2117 }, { "name": "cash", "outputs": [{ "type": "uint256", "name": "" }], "inputs": [], "constant": true, "payable": false, "type": "function", "gas": 563 }, { "name": "payBill", "outputs": [], "inputs": [{ "type": "address", "name": "vendor" }, { "type": "uint256", "name": "amount" }], "constant": false, "payable": false, "type": "function", "gas": 38171 }, { "name": "totalShares", "outputs": [{ "type": "uint256", "name": "" }], "inputs": [], "constant": true, "payable": false, "type": "function", "gas": 1421 }, { "name": "price", "outputs": [{ "type": "uint256", "name": "" }], "inputs": [], "constant": true, "payable": false, "type": "function", "gas": 1451 }, { "name": "softCap", "outputs": [{ "type": "uint256", "name": "" }], "inputs": [], "constant": true, "payable": false, "type": "function", "gas": 1481 }, { "name": "buy_order", "outputs": [{ "type": "uint256", "name": "" }], "inputs": [], "constant": true, "payable": false, "type": "function", "gas": 1511 }, { "name": "owner", "outputs": [{ "type": "address", "name": "" }], "inputs": [], "constant": true, "payable": false, "type": "function", "gas": 1541 }]).at('0x7b3b1049ff4171fe069c0e28a04d8db7e7a9fd37');
         console.log("icoContract", icoContract);
