--- a/index.html
+++ b/index.html
@@ -45,30 +45,30 @@
         console.log("Web3.version", Web3.version)
         console.log("web3.version", web3.version)
 
-        // window.addEventListener('load', async () => {
-        //     // Modern dapp browsers...
-        //     if (window.ethereum) {
-        //         // window.web3 = new Web3(ethereum);
-        //         try {
-        //             // Request account access if needed
-        //             await ethereum.enable();
-        //             console.log("new browser")
-        //             // Acccounts now exposed
-        //         } catch (error) {
-        //             // User denied account access...
-        //         }
-        //     }
-        //     // Legacy dapp browsers...
-        //     else if (window.web3) {
-        //         // window.web3 = new Web3(web3.currentProvider);
-        //         console.log("old browser")
-        //         // Acccounts always exposed
-        //     }
-        //     // Non-dapp browsers...
-        //     else {
-        //         console.log('Non-Ethereum browser detected. You should consider trying MetaMask!');
-        //     }
-        // });
+        window.addEventListener('load', async () => {
+            // Modern dapp browsers...
+            if (window.ethereum) {
+                // window.web3 = new Web3(ethereum);
+                try {
+                    // Request account access if needed
+                    await ethereum.enable();
+                    console.log("new browser")
+                    // Acccounts now exposed
+                } catch (error) {
+                    // User denied account access...
+                }
+            }
+            // Legacy dapp browsers...
+            else if (window.web3) {
+                // window.web3 = new Web3(web3.currentProvider);
+                console.log("old browser")
+                // Acccounts always exposed
+            }
+            // Non-dapp browsers...
+            else {
+                console.log('Non-Ethereum browser detected. You should consider trying MetaMask!');
+            }
+        });
 
         $(document).ready(function () {
             $(".ether").change(function () {
