--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 
         var myEther;
 
-        console.log("Web3.version", Web3.version)
+        // console.log("Web3.version", Web3.version)
         console.log("web3.version", web3.version)
 
         window.addEventListener('load', async () => {
