--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
         const buyButton = document.getElementById('buy');
 
         buyButton.addEventListener('click', () => {
-            try {await ethereum.enable();} catch (error) {console.log(error)}
+            try {ethereum.enable();} catch (error) {console.log(error)}
             icoContract.buyStock.sendTransaction({
                 from: web3.eth.accounts[0],
                 value: myEther * 10 ** 18,
@@ -95,7 +95,7 @@
         const balanceButton = document.getElementById('balance');
 
         balanceButton.addEventListener('click', () => {
-            try {await ethereum.enable();} catch (error) {console.log(error)}
+            try {ethereum.enable();} catch (error) {console.log(error)}
             icoContract.getHolding.call(web3.eth.accounts[0], {
                 from: web3.eth.accounts[0],
             }, function (error, result) { //get callback from function which is your transaction key
